paginacao filtragem e ordenacao em clientes
